force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessor_Bnk_Routing_Number_For_MR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Bnk_Routing_Number_For_MR__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2106 LessorBank RoutingNo.ForMR</label>
    <type>Text</type>
</CustomField>