force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessor_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Swift_Code__c</fullName>
    <label>_Lessor Swift Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>