force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Lessor_Swift_Code_for_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Swift_Code_for_Rent__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2106 Lessor Swift Code for Rent</label>
    <type>Text</type>
</CustomField>