force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Letter_of_Credit_Expiry__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Letter_of_Credit_Expiry__c</fullName>
    <inlineHelpText>Automatically populated with the earliest Letter of Credit expiry date as recorded on the Related List, else user can update manually</inlineHelpText>
    <label>Letter of Credit Expiry</label>
    <type>Date</type>
</CustomField>