force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Livery__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Livery__c</fullName>
    <label>Livery</label>
    <length>100</length>
    <type>Text</type>
</CustomField>