force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Low_Season_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Low_Season_End_Date__c</fullName>
    <description>Date on which low season ends</description>
    <inlineHelpText>Date on which low season ends</inlineHelpText>
    <label>Z_Unused 2006 Low Season End Date</label>
    <type>Date</type>
</CustomField>