force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Low_Season_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Low_Season_Rent__c</fullName>
    <label>Z_Unused 2006 Low Season Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>