force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__LP_Fan_Shaft_Rotor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LP_Fan_Shaft_Rotor__c</fullName>
    <label>Z_Unused_2306 LPFanShaftRotorAllocation%</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>