force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Managing_Company__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Managing_Company__c</fullName>
    <label>Managing Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>