force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Margin__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>