force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Maximum_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maximum_Notification_Date__c</fullName>
    <description>Indicates the maximum date by which the Airline can notify the interest to extent the lease. If the This field affects the functionality of the field Expired extension option (which indicates  If today is greater than the &quot;Maximum Notification Date&quot; and &quot;Extension option exercised&quot; has NOT been tick)</description>
    <inlineHelpText>Indicates the maximum date by which the operator can notify the interest to extend the lease</inlineHelpText>
    <label>Z_Unused_2103 Renewal Max. Notify Date</label>
    <type>Date</type>
</CustomField>