force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__MR_EOL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_EOL__c</fullName>
    <label>Z_Unused_2306 MR/EOL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>EOL</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>