force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__MR_Escalation_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Escalation_Month__c</fullName>
    <inlineHelpText>Escalation of MR rates is performed on day 1 of this month</inlineHelpText>
    <label>Z_Unused_2002 MR Escalation Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>