force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__MR_Invoice_Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Invoice_Comment__c</fullName>
    <description>MR specific details about the items listed on the invoice, ensuring that the recipient understands the charges.</description>
    <inlineHelpText>Additional MR information or notes that will be included on MR invoice.</inlineHelpText>
    <label>MR Invoice Comment</label>
    <type>TextArea</type>
</CustomField>