force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__MRR_Airframe_Heavy_Maint_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MRR_Airframe_Heavy_Maint_Check__c</fullName>
    <description>Maintenance Reserve $ Rate for each calendar month for heavy maintenance 2</description>
    <inlineHelpText>Maintenance Reserve $ Rate for each calendar month for heavy maintenance 2</inlineHelpText>
    <label>Z_Unused Current MRR HM 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>