force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__MRR_Engine__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MRR_Engine__c</fullName>
    <description>Amount set aside for each Flight Hour operated by that Engine during that calendar month</description>
    <inlineHelpText>Amount set aside for each Flight Hour operated by that Engine during that calendar month</inlineHelpText>
    <label>Z_Unused Current MRR Engine 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>