force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Must_Return_w_Orig_Eng_SNs__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Must_Return_w_Orig_Eng_SNs__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Soruce: Volito. Asana: Lease Summary</description>
    <label>Must Return w/ Original Engine Serial #?</label>
    <type>Checkbox</type>
</CustomField>