force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__MX_Liabilities_During_Lease_K__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MX_Liabilities_During_Lease_K__c</fullName>
    <description>MX Liabilities, net of prior lease mx compensation</description>
    <inlineHelpText>MX Liabilities, net of prior lease mx compensation</inlineHelpText>
    <label>Z_Unused_2306 MX Liability During Lease</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>