force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__New_Region__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__New_Region__c</fullName>
    <formula>TEXT( leaseworks__Habitual_Base__r.leaseworks__Region__c )</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>