force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Next_MRR_Anniversary_Dt__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Next_MRR_Anniversary_Dt__c</fullName>
    <formula>if( !isblank( leaseworks__Last_MRR_Anniversary_Dt__c ), DATE(year(leaseworks__Last_MRR_Anniversary_Dt__c)+1,month(leaseworks__Last_MRR_Anniversary_Dt__c),if(month(leaseworks__Last_MRR_Anniversary_Dt__c)==2 &amp;&amp; day(leaseworks__Last_MRR_Anniversary_Dt__c)==29,28,day(leaseworks__Last_MRR_Anniversary_Dt__c))) ,null)</formula>
    <label>Z_Unused_2306 Next MRR Anniversary Date</label>
    <type>Date</type>
</CustomField>