force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Non_Modular__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Non_Modular__c</fullName>
    <label>Z_Unused_2306 Non Modular (%)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>