force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Notification_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Notification_Period_Days__c</fullName>
    <inlineHelpText>Written Notice Period (# of days before Early Termination Date)</inlineHelpText>
    <label>Z_Unused_2103 Termination Notice Period</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>