force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Operator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Operator__c.leaseworks__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>