force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Original_Agreed_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Original_Agreed_Value__c</fullName>
    <description>The agreed value of the insurance certificate for the year when the lease contract officially starts.</description>
    <inlineHelpText>The agreed value of the insurance certificate for the year when the lease contract officially starts.</inlineHelpText>
    <label>Original Agreed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>