force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Payments_in_Arrears_Advance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payments_in_Arrears_Advance__c</fullName>
    <label>Z_Unused_2109Payments in Arrears/Advance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrears</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>