force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__PBH_Rates__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PBH_Rates__c</fullName>
    <description>List of Power By the Hour rent rates per the lease, used to calculate the rental income during the rent period based on usage of the asset.

For example, if 0-9 months, rate is $165, if 10-18 months, rate is $135, if 19+ months, rate is $120. The rates should be entered as 165, 135, 120 (with a comma separating each rate).</description>
    <inlineHelpText>List of PBH rent rates per the lease, used to calculate the rental income during the rent period. For example, if 0-9 months, rate is $165, if 10-18 months, rate is $135, if 19+ months, rate is $120. The rates should be entered as 165, 135, 120.</inlineHelpText>
    <label>Z_Unused 2001 PBH Rates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>