force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Pct_Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pct_Maintenance_Reserve__c</fullName>
    <description>Source: Fortress (Dave&#39;s accounting needs)</description>
    <inlineHelpText>% of invoice to be applied towards maintenance reserve</inlineHelpText>
    <label>% Maintenance Reserve</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>