force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Placement_By_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Placement_By_Date__c</fullName>
    <description>Source: AirCastle
Asana: Create a new fields Placement By date And Watch Aircraft</description>
    <inlineHelpText>Date by when this aircraft should be placed.</inlineHelpText>
    <label>Placement By Date</label>
    <type>Date</type>
</CustomField>