force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Previous_Operator_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Previous_Operator_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Operator</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases (Previous Operator)</relationshipLabel>
    <relationshipName>Leases_Prev_Operator_New</relationshipName>
    <type>Lookup</type>
</CustomField>