force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Pro_rata_number_of_days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Pro_rata_number_of_days__c</fullName>
    <defaultValue>&apos;Actual number of days in month/year&apos;</defaultValue>
    <description>Should rent be billed for a partial period, the pro-rata number days can be calculated based on actual number of days in the month/year, or fixed 30/360.</description>
    <inlineHelpText>Should rent be billed for a partial period, the pro-rata number days can be calculated based on actual number of days in the month/year, or fixed 30/360.</inlineHelpText>
    <label>_Pro-rata Number Of Days</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual number of days in month/year</fullName>
            </value>
            <value>
                <fullName>Fixed - 30/360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>