force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Progress__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Lease</fullName>
            </value>
            <value>
                <fullName>Create Supplemental Rent &amp; Escalations</fullName>
            </value>
            <value>
                <fullName>Create Security Deposit / Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Create Ratio Tables (Optional)</fullName>
            </value>
            <value>
                <fullName>Create Insurance Stipulations &amp; Certificates</fullName>
            </value>
            <value>
                <fullName>Create Delivery Details (Optional)</fullName>
            </value>
            <value>
                <fullName>Create Return Conditions (Optional)</fullName>
            </value>
            <value>
                <fullName>Approve Lease</fullName>
            </value>
            <value>
                <fullName>Create Rent Schedule</fullName>
            </value>
            <value>
                <fullName>Create Assembly MR Info &amp; Escalations</fullName>
                <isActive>false</isActive>
                <label>Create Assembly MR Info &amp; Escalations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>