force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Purchase_Price_Option__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_2103 Purchase Option?</label>
    <type>Checkbox</type>
</CustomField>