force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Redelivery_Condition_At_Termination__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Redelivery_Condition_At_Termination__c</fullName>
    <label>Redelivery Condition At Termination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As Specified In Lease</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>