force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Redelivery_Date_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Redelivery_Date_F__c</fullName>
    <formula>IF(OR(ISBLANK( leaseworks__Redelivery_Date__c ) ,ISNULL(leaseworks__Redelivery_Date__c)),  TODAY() , leaseworks__Redelivery_Date__c)</formula>
    <label>_Redelivery Date</label>
    <type>Date</type>
</CustomField>