force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Redelivery_Location__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Redelivery_Location__c</fullName>
    <label>Redelivery Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>