force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Redelivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Redelivery_Terms__c</fullName>
    <description>Picklist to choose between - &apos;Redelivery Date Driven&apos; or &apos;Lease Term Driven&apos;</description>
    <label>Redelivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redelivery Date Driven</fullName>
            </value>
            <value>
                <fullName>Lease Term Driven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>