force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Reduction_No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reduction_No_of_Days__c</fullName>
    <description>If the AV Reduction periodicity is set to a custom number of days, this field specifies the exact number of days for each reduction period.</description>
    <label>AV Reduction No.of Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>