force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Reduction_Percent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reduction_Percent__c</fullName>
    <description>The percentage entered in this field is deducted from the original agreed value for each reduction schedule. For example, with an agreed value of 10,000,000 and a 10% reduction, 1,000,000 will be subtracted in each schedule period.</description>
    <inlineHelpText>The percentage entered in this field will be deducted from the original agreed value for each reduction schedule. For example, if the agreed value is 10,000,000 and the percentage is 10%, then 1,000,000 will be reduced for each schedule period.</inlineHelpText>
    <label>AV Reduction (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>