force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Reduction_Periodicity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reduction_Periodicity__c</fullName>
    <description>The AV reduction schedules are generated based on the entered periodicity. For example, with a yearly periodicity, the period between the start and end dates will be 365/366 days</description>
    <inlineHelpText>The AV reduction schedules are generated based on the entered periodicity. For example, with a yearly periodicity, the period between the start and end dates will be 365/366 days</inlineHelpText>
    <label>AV Reduction Periodicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
                <default>true</default>
                <label>Yearly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Custom No.of Days</fullName>
                <label>Custom No. of Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>