force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Region__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Region__c</fullName>
    <label>Z_Unused_2206 Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>