force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Remaining_Lease_Term_Mos__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remaining_Lease_Term_Mos__c</fullName>
    <formula>if( AND(leaseworks__Active__c ,leaseworks__Lease_End_Date_New__c&gt;Today()) ,Round(((leaseworks__Lease_End_Date_New__c-Today())/(365.0/12)),0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Contract Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>