force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent__c</fullName>
    <description>Current rent can be updated manually or through integration. The system keeps updating the value through the scheduler based on the current rent schedule. If no rent schedule is set or if it&#39;s deleted, the previous value will be retained.</description>
    <inlineHelpText>Current Rent as at today&#39;s date, equal to Base Rent including any rent escalation</inlineHelpText>
    <label>_Current Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>