force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Rent_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Date__c</fullName>
    <label>Rent Start Date</label>
    <type>Date</type>
</CustomField>