force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Rent_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rent_Type__c</fullName>
    <description>Types of monthly rent calculations. For variable Rent: there will be a base (say $100), a multiplier (say 1.1) and will be tied to Libor (say its 2% for a certain mo). Calculation would be 100*1.1 = 110. and then adjust down by 2% (calculated on 100). So net amount would be 108. Also, may have a floor or ceiling. If the ceiling is 107, then you pay 107 instead of 108. 
Base
Multiplier
Libor
Value = Base * Multiplier - (Base*LIBOR)</description>
    <inlineHelpText>Rent Type per the lease</inlineHelpText>
    <label>_Rent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Rent</fullName>
                <default>true</default>
                <label>Fixed Rent</label>
            </value>
            <value>
                <fullName>Power By The Hour</fullName>
            </value>
            <value>
                <fullName>Power By The Hour With a minimum</fullName>
            </value>
            <value>
                <fullName>Floating Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>