force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Reserve_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reserve_Type__c</fullName>
    <description>This field will be updated as per the value of Type field on all Supplemental Rents. If all Supplemental Rents have Type as a mix of Maintenance Reserves and End of Lease Adjustment, this field will be updated to &apos;Multiple&apos;.</description>
    <inlineHelpText>This field will be updated as per the value of Type field on all Supplemental Rents. If all Supplemental Rents have Type as a mix of Maintenance Reserves and End of Lease Adjustment, this field will be updated to &apos;Multiple&apos;.</inlineHelpText>
    <label>Supplemental Rent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance Reserves</fullName>
            </value>
            <value>
                <fullName>EOL</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>LOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>