force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Return_Condition__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Return_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Minimum return conditions as per current contract. This field is linked to the Forecast. The previous name was End of Lease Return Conditions but was renamed to the correct name</description>
    <inlineHelpText>Minimum return conditions as per current contract. This field is linked to the Forecast.</inlineHelpText>
    <label>Minimum Lease Return Conditions</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please select Return Condition value for Minimum Lease Return Condition field.</errorMessage>
        <filterItems>
            <field>leaseworks__Component_Return_Condition__c.leaseworks__Type__c</field>
            <operation>equals</operation>
            <value>Return Condition</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Component_Return_Condition__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>