force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Rollover_Option_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rollover_Option_Price__c</fullName>
    <label>Rollover Option Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>