force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Deposit__c</fullName>
    <inlineHelpText>This is the stipulated amount of security required by the lease. It can be fulfilled by Cash and/or Letter of Credit</inlineHelpText>
    <label>Security Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>