force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Security_Deposit_Ca__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Deposit_Ca__c</fullName>
    <inlineHelpText>This is the amount of the Cash Security Deposit net of any refunds</inlineHelpText>
    <label>Remaining Security Deposit (Cash)</label>
    <summarizedField>leaseworks__Cash_Security_Deposit__c.leaseworks__Security_Depo_Cash__c</summarizedField>
    <summaryForeignKey>leaseworks__Cash_Security_Deposit__c.leaseworks__Lease__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>